--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint": "^7.18.0",
     "eslint-webpack-plugin": "^2.4.1",
     "html-webpack-plugin": "4.5.1",
+    "redux": "4.0.5",
+    "reselect": "4.0.0",
     "rollup": "2.36.2",
     "typescript": "4.1.3",
     "webpack": "5.15.0",
