--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "eslint-webpack-plugin": "^2.4.1",
     "html-webpack-plugin": "4.5.1",
     "redux": "4.0.5",
+    "redux-thunk": "^2.3.0",
     "reselect": "4.0.0",
     "rollup": "2.36.2",
+    "ts-toolbelt": "^9.6.0",
     "typescript": "4.1.3",
     "webpack": "5.15.0",
     "webpack-cli": "4.3.1",
