--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-  "name": "redux-slices",
-  "version": "1.0.0",
-  "description": "Manage slices of a redux store in a concise, clear way",
-  "main": "dist/redux-slices.cjs.js",
-  "scripts": {
-    "dev": "webpack serve",
-    "test": "NODE_PATH=. jest",
-    "typecheck": "tsc --noEmit"
+  "author": "tony.quetano@planttheidea.com",
+  "browser": "dist/redux-slices.js",
+  "bugs": {
+    "url": "https://github.com/planttheidea/redux-slices/issues"
   },
+  "description": "Manage slices of a redux store in a concise, clear way",
+  "devDependencies": {
+    "@babel/cli": "7.14.8",
+    "@babel/core": "7.14.8",
+    "@babel/preset-typescript": "7.14.5",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.2",
+    "eslint": "^7.32.0",
+    "eslint-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "5.3.2",
+    "redux": "4.1.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "4.0.0",
+    "rollup": "2.55.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-toolbelt": "^9.6.0",
+    "typescript": "4.3.5",
+    "webpack": "5.47.1",
+    "webpack-cli": "4.7.2",
+    "webpack-dev-server": "3.11.2"
+  },
+  "homepage": "https://github.com/planttheidea/redux-slices#readme",
+  "keywords": [
+    "redux",
+    "reducer",
+    "state"
+  ],
+  "license": "MIT",
+  "main": "dist/redux-slices.cjs.js",
+  "module": "dist/redux-slices.esm.js",
+  "name": "redux-slices",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/planttheidea/redux-slices.git"
   },
-  "keywords": [
-    "redux",
-    "reducer",
-    "state",
-    "functional",
-    "immutable"
-  ],
-  "author": "tony.quetano@planttheidea.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/planttheidea/redux-slices/issues"
+  "scripts": {
+    "build": "NODE_ENV=production rollup -c",
+    "dev": "webpack serve",
+    "test": "NODE_PATH=. jest",
+    "typecheck": "tsc --noEmit"
   },
-  "homepage": "https://github.com/planttheidea/redux-slices#readme",
-  "devDependencies": {
-    "@babel/cli": "7.12.10",
-    "@babel/core": "7.12.10",
-    "@babel/preset-typescript": "7.12.7",
-    "@rollup/plugin-babel": "5.2.2",
-    "@rollup/plugin-commonjs": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
-    "eslint": "^7.18.0",
-    "eslint-webpack-plugin": "^2.4.1",
-    "html-webpack-plugin": "4.5.1",
-    "redux": "4.0.5",
-    "redux-thunk": "^2.3.0",
-    "reselect": "4.0.0",
-    "rollup": "2.36.2",
-    "ts-toolbelt": "^9.6.0",
-    "typescript": "4.1.3",
-    "webpack": "5.15.0",
-    "webpack-cli": "4.3.1",
-    "webpack-dev-server": "3.11.2"
-  }
+  "version": "1.0.0"
 }
