--- a/package.json
+++ b/package.json
@@ -8,23 +8,25 @@
   "devDependencies": {
     "@babel/cli": "7.14.8",
     "@babel/core": "7.14.8",
+    "@babel/preset-env": "7.14.9",
     "@babel/preset-typescript": "7.14.5",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-node-resolve": "13.0.4",
+    "@typescript-eslint/eslint-plugin": "4.29.0",
+    "@typescript-eslint/parser": "4.29.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
-    "eslint": "^7.32.0",
-    "eslint-webpack-plugin": "^3.0.1",
+    "eslint": "7.32.0",
+    "eslint-webpack-plugin": "3.0.1",
     "html-webpack-plugin": "5.3.2",
     "redux": "4.1.0",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
     "rollup": "2.55.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "ts-toolbelt": "^9.6.0",
+    "rollup-plugin-terser": "7.0.2",
+    "ts-toolbelt": "9.6.0",
     "typescript": "4.3.5",
-    "webpack": "5.47.1",
+    "webpack": "5.48.0",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2"
   },
