--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@babel/preset-typescript": "7.14.5",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.4",
+    "@types/jest": "26.0.24",
     "@typescript-eslint/eslint-plugin": "4.29.0",
     "@typescript-eslint/parser": "4.29.0",
     "babel-eslint": "10.1.0",
+    "babel-jest": "27.0.6",
     "babel-loader": "8.2.2",
     "eslint": "7.32.0",
     "eslint-webpack-plugin": "3.0.1",
     "html-webpack-plugin": "5.3.2",
-    "redux": "4.1.0",
+    "jest": "27.0.6",
+    "redux": "4.1.1",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
     "rollup": "2.55.1",
@@ -47,7 +50,8 @@
   "scripts": {
     "build": "NODE_ENV=production rollup -c",
     "dev": "webpack serve",
-    "test": "NODE_PATH=. jest",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "npm run test -- --watch",
     "typecheck": "tsc --noEmit"
   },
   "version": "1.0.0"
