--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
   "scripts": {
     "build": "NODE_ENV=production rollup -c",
     "dev": "webpack serve",
+    "lint": "eslint src/*.ts",
+    "prerelease": "yarn typecheck && yarn lint && yarn test && yarn build",
     "test": "NODE_ENV=test jest",
+    "test:coverage": "npm run test -- --coverage",
     "test:watch": "npm run test -- --watch",
     "typecheck": "tsc --noEmit"
   },
