--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@babel/cli": "7.14.8",
     "@babel/core": "7.14.8",
     "@babel/preset-env": "7.14.9",
+    "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "7.14.5",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.4",
     "@types/jest": "26.0.24",
@@ -22,6 +25,9 @@
     "eslint-webpack-plugin": "3.0.1",
     "html-webpack-plugin": "5.3.2",
     "jest": "27.0.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "redux": "4.1.1",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
