--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "test": "NODE_ENV=test jest",
     "test:coverage": "npm run test -- --coverage",
     "test:watch": "npm run test -- --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc"
   },
   "version": "1.0.0"
 }
