--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,25 @@
 {
-    "compilerOptions": {
-      "allowJs": true,
-      "baseUrl": "src",
-      "esModuleInterop": true,
-      "jsx": "react",
-      "lib": ["dom", "es2015"],
-      "module": "esnext",
-      "moduleResolution": "node",
-      "noImplicitAny": true,
-      "outDir": "./dist",
-      "skipLibCheck": true,
-      "sourceMap": true,
-      "strict": true,
-      "target": "es5"
-    },
-    "exclude": ["node_modules"],
-    "include": ["src/*", "__tests__/*"],
-    "typedocOptions": {
-      "mode": "file",
-      "out": "docs",
-      "inputFiles": ["src"]
-    }
+  "compilerOptions": {
+    "allowJs": true,
+    "baseUrl": "src",
+    "esModuleInterop": true,
+    "jsx": "react",
+    "lib": ["dom", "es2015"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "noImplicitAny": true,
+    "outDir": "./dist",
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es5"
+  },
+  "exclude": ["node_modules"],
+  "include": ["src/*", "__tests__/*"],
+  "typedocOptions": {
+    "mode": "file",
+    "out": "docs",
+    "inputFiles": ["src"]
   }
-  
+}
