add `index.d.ts` file for exposed typings

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "files": [
     "dist/*",
+    "src/*",
     "index.d.ts"
   ],
   "homepage": "https://github.com/planttheidea/redux-slices#readme",
