--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-loader": "8.2.2",
     "eslint": "7.32.0",
     "eslint-webpack-plugin": "3.0.1",
+    "fast-copy": "^2.1.1",
+    "fast-equals": "^2.0.3",
     "html-webpack-plugin": "5.3.2",
     "jest": "27.0.6",
     "react": "^17.0.2",
