--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "url": "https://github.com/planttheidea/redux-slices/issues"
   },
   "description": "Manage slices of a redux store in a concise, clear way",
+  "dependencies": {
+    "ts-toolbelt": "9.6.0"
+  },
   "devDependencies": {
     "@babel/cli": "7.14.8",
     "@babel/core": "7.14.8",
@@ -35,7 +38,6 @@
     "reselect": "4.0.0",
     "rollup": "2.55.1",
     "rollup-plugin-terser": "7.0.2",
-    "ts-toolbelt": "9.6.0",
     "typescript": "4.3.5",
     "webpack": "5.48.0",
     "webpack-cli": "4.7.2",
@@ -73,5 +75,5 @@
     "test:watch": "npm run test -- --watch",
     "typecheck": "tsc"
   },
-  "version": "1.0.0-0"
+  "version": "1.0.0-1"
 }
